Initial commit for new repo

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
     </div>
 
     <script>
-        const BACKEND_URL = 'pepper-rag-backend-survei-production.up.railway.app'; // GANTI DENGAN URL RAILWAY ANDA
+        const BACKEND_URL = 'https://pepper-rag-backend-survei-production.up.railway.app'; // GANTI DENGAN URL RAILWAY ANDA
         
         let currentQueryId = null;
         let awaitingRating = false;
