--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
     </div>
 
     <script>
-        const BACKEND_URL = 'https://your-backend-url.railway.app'; // GANTI DENGAN URL RAILWAY ANDA
+        const BACKEND_URL = 'https://pepper-rag-backend-survei-production.up.railway.app'; // GANTI DENGAN URL RAILWAY ANDA
         
         let currentQueryId = null;
         let awaitingRating = false;
